--- a/public/css/app.css
+++ b/public/css/app.css
@@ -769,6 +769,11 @@ header nav a:hover {
   color: white;
 }
 
+#site-section #results h1 {
+  text-align: center;
+  color: white;
+}
+
 #site-section #results input {
   flex: auto;
   width: 100%;
@@ -806,6 +811,7 @@ header nav a:hover {
   padding: 0;
   border-radius: 3px;
   border: 5px solid #fff;
+  margin-bottom: 3rem;
 }
 
 #site-section #results .boxes .box:hover {
@@ -984,6 +990,93 @@ header nav a:hover {
   font-size: 5rem;
   text-align: center;
   display: block;
+}
+
+#admin-section .edit-btn {
+  -webkit-appearance: button;
+     -moz-appearance: button;
+          appearance: button;
+  display: inline-block;
+  text-decoration: none;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  background-color: #00c9b2;
+  border-radius: 6px;
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset, rgba(50, 50, 93, 0.1) 0 2px 5px 0, rgba(0, 0, 0, 0.07) 0 1px 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-size: 12px;
+  line-height: 1.15;
+  outline: none;
+  overflow: hidden;
+  padding: 10px 25px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transform: translateZ(0);
+  transition: all 0.2s, box-shadow 0.08s ease-in;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+#admin-section .edit-btn:disabled {
+  cursor: default;
+}
+
+#admin-section .edit-btn:focus {
+  box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset, rgba(50, 50, 93, 0.2) 0 6px 15px 0, rgba(0, 0, 0, 0.1) 0 2px 2px 0, rgba(50, 151, 211, 0.3) 0 0 0 4px;
+}
+
+#admin-section table {
+  width: 100%;
+  margin-top: 1.5rem;
+  background: linear-gradient(45deg, #49a09d, #5f2c82);
+  border-collapse: collapse;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+#admin-section th,
+#admin-section td {
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #fff;
+}
+
+#admin-section th {
+  text-align: left;
+}
+
+#admin-section td {
+  vertical-align: middle;
+}
+
+#admin-section thead th {
+  background-color: #55608f;
+}
+
+#admin-section tbody tr:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+#admin-section tbody td {
+  position: relative;
+}
+
+#admin-section tbody td:hover:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: -9999px;
+  bottom: -9999px;
+  background-color: rgba(255, 255, 255, 0.2);
+  z-index: -1;
 }
 
 * {
