--- a/resources/sass/_site.scss
+++ b/resources/sass/_site.scss
@@ -32,7 +32,7 @@ header {
 }
 
 #site-section {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   padding-top: 56px;
 
   #home {
@@ -67,9 +67,9 @@ header {
         color: #ccc;
         text-align: center;
         display: inline-block;
-        -webkit-box-shadow: 0 10px 68px 10px rgba(83,101,148,0.37);
-        -moz-box-shadow: 0 10px 68px 10px rgba(83,101,148,0.37);
-        box-shadow: 0 10px 68px 10px rgba(83,101,148,0.37);
+        -webkit-box-shadow: 0 10px 68px 10px rgba(83, 101, 148, 0.37);
+        -moz-box-shadow: 0 10px 68px 10px rgba(83, 101, 148, 0.37);
+        box-shadow: 0 10px 68px 10px rgba(83, 101, 148, 0.37);
         transition: all 0.6s ease-in-out;
 
         &::-webkit-input-placeholder {
@@ -92,6 +92,11 @@ header {
   }
 
   #results {
+    h1 {
+      text-align: center;
+      color: white;
+    }
+
     input {
       flex: auto;
       width: 100%;
@@ -103,9 +108,9 @@ header {
       color: #ccc;
       text-align: center;
       display: inline-block;
-      -webkit-box-shadow: 0 10px 68px 10px rgba(83,101,148,0.37);
-      -moz-box-shadow: 0 10px 68px 10px rgba(83,101,148,0.37);
-      box-shadow: 0 10px 68px 10px rgba(83,101,148,0.37);
+      -webkit-box-shadow: 0 10px 68px 10px rgba(83, 101, 148, 0.37);
+      -moz-box-shadow: 0 10px 68px 10px rgba(83, 101, 148, 0.37);
+      box-shadow: 0 10px 68px 10px rgba(83, 101, 148, 0.37);
       transition: all 0.6s ease-in-out;
       margin: 50px 0;
 
@@ -132,6 +137,7 @@ header {
         padding: 0;
         border-radius: 3px;
         border: 5px solid #fff;
+        margin-bottom: 3rem;
 
         &:hover {
           cursor: pointer;
@@ -155,16 +161,16 @@ header {
           display: flex;
           align-items: center;
           justify-content: center;
-          -webkit-box-shadow: 0 10px 68px 10px rgba(83,101,148,0.37);
-          -moz-box-shadow: 0 10px 68px 10px rgba(83,101,148,0.37);
-          box-shadow: 0 10px 68px 10px rgba(83,101,148,0.37);
+          -webkit-box-shadow: 0 10px 68px 10px rgba(83, 101, 148, 0.37);
+          -moz-box-shadow: 0 10px 68px 10px rgba(83, 101, 148, 0.37);
+          box-shadow: 0 10px 68px 10px rgba(83, 101, 148, 0.37);
           transition: all 0.6s ease-in-out;
 
           &.active,
           &:hover {
             top: 20px;
             opacity: 1;
-            background: linear-gradient(45deg, #72dfe9 0%,#d69cfe 100%);
+            background: linear-gradient(45deg, #72dfe9 0%, #d69cfe 100%);
 
             i.fa-check {
               display: block;
