--- a/resources/sass/_accounts.scss
+++ b/resources/sass/_accounts.scss
@@ -148,3 +148,12 @@
 .btn.delete-btn {
   background-color: #f60049;
 }
+
+.delete-inspiration {
+  display: block;
+  width: 100%;
+  margin-top: 1rem;
+  text-decoration: none;
+  text-align: center;
+  color: #f60049;
+}
