--- a/resources/sass/_site.scss
+++ b/resources/sass/_site.scss
@@ -225,6 +225,9 @@ input.is-invalid {
 
 .invalid-feedback {
   color: #f60049;
+  display: block;
+  padding-bottom: 0.5rem;
+  font-size: 12px;
 }
 
 input[type="checkbox"] {
