--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1104,7 +1104,8 @@ input[type=checkbox] {
   z-index: -1;
 }
 
-#admin-section input {
+#admin-section input,
+#admin-section select {
   margin: 1rem 0;
 }
 
