--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1178,7 +1178,7 @@ html {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1e5799+0,2989d8+50,207cca+51,7db9e8+100;Blue+Gloss+Default */
   background: linear-gradient(45deg, #72dfe9 0%, #d69cfe 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  height: 100vh;
+  min-height: 100vh;
   font-family: "Roboto", sans-serif;
 }
 
